hexagonal-infrastructure/src/main/kotlin/com/example/global/error/data/DefaultErrorResponse.kt
package com.example.global.error.data

data class DefaultErrorResponse(
    val status: Int,
    val message: String
)